<?xml version="1.0" encoding="utf-8"?>
<!-- android:background="@android:color/transparent"  --> 
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical" >

    <ImageButton
        android:id="@+id/storage_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2.0dip"
        android:layout_marginLeft="2.0dip"
        android:layout_marginRight="2.0dip"
        android:layout_marginTop="8.0dip"   
        android:background="@null"
        android:contentDescription="@string/icon_description"
        android:src="@drawable/blue_device_28" />

    <!-- android:src="@android:drawable/btn_star" -->

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/storage_icon"
        android:orientation="vertical" >

	    <LinearLayout
	        android:id="@+id/linearLayout2"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        
	        android:orientation="horizontal" >        
		    <TextView
		        android:id="@+id/simple_text_name"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" 
		        android:layout_weight="0.5"       
		        android:gravity="left|top"
		        android:text="@string/default_partition_title"
		        android:textAppearance="?android:attr/textAppearanceSmall"
		        android:textColor="#ff1111ff"
		        android:textStyle="bold" />        
		    
		    <TextView
		        android:id="@+id/simple_text_path"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_vertical|right"
		        android:layout_weight="0.50"
		        android:gravity="right"
		        android:text="@string/default_partition_path"
		        android:textAppearance="?android:attr/textAppearanceSmall"
		        android:textColor="#ff1111ff"
		        android:textStyle="bold" />
	  
	    </LinearLayout>
    <FrameLayout
        android:id="@+id/frameLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Using custom progress bar -->
        <ProgressBar
            android:id="@+id/simple_progress"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:progressDrawable="@drawable/myprogressbar" 
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="0.0dip"
            android:layout_marginLeft="4.0dip"
            android:layout_marginRight="4.0dip"
            android:layout_marginTop="2.0dip"            
            android:alpha="6" />

        <TextView
            android:id="@+id/simple_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:text="@string/percent_full"
            android:textColor="#ff222222"
            android:textSize="14.0sp" />        

    </FrameLayout>
    </LinearLayout>
</RelativeLayout> 
