<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TableLayout android:paddingLeft="16.0dip" android:paddingTop="16.0dip" android:paddingRight="16.0dip" android:paddingBottom="6.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:stretchColumns="1">
        <TableRow android:minWidth="48.0dip">
            <TextView android:textSize="14.0sp" android:textColor="?android:textColorSecondary" android:id="@id/details_path_label" android:paddingLeft="8.0dip" android:paddingTop="8.0dip" android:paddingRight="8.0dip" android:paddingBottom="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_column="0" android:text="@string/path" />
            <TextView android:textSize="16.0sp" android:textColor="#ff33b5e5" android:gravity="right" android:id="@id/details_path" android:paddingLeft="8.0dip" android:paddingTop="8.0dip" android:paddingRight="8.0dip" android:paddingBottom="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_column="1" />
        </TableRow>
        <View android:background="#ff33b5e5" android:layout_height="1.0dip" />
        <FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
            <ProgressBar android:layout_gravity="center" android:id="@id/details_progress" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="8.0dip" android:layout_marginTop="16.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="16.0dip" style="@android:style/Widget.ProgressBar.Horizontal" />
            <TextView android:textSize="14.0sp" android:textColor="#ff222222" android:layout_gravity="center" android:id="@id/details_percentage" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </FrameLayout>
        <View android:background="#ff222222" android:layout_height="1.0px" />
        <TableRow android:minWidth="48.0dip">
            <TextView android:textSize="14.0sp" android:textColor="?android:textColorSecondary" android:paddingLeft="8.0dip" android:paddingTop="8.0dip" android:paddingRight="8.0dip" android:paddingBottom="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_column="0" android:text="@string/total" />
            <TextView android:textSize="16.0sp" android:textColor="?android:textColorPrimary" android:gravity="right" android:id="@id/details_size" android:paddingLeft="8.0dip" android:paddingTop="8.0dip" android:paddingRight="8.0dip" android:paddingBottom="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_column="1" />
        </TableRow>
        <View android:background="#ff222222" android:layout_height="1.0px" />
        <TableRow android:minWidth="48.0dip">
            <TextView android:textSize="14.0sp" android:textColor="?android:textColorSecondary" android:paddingLeft="8.0dip" android:paddingTop="8.0dip" android:paddingRight="8.0dip" android:paddingBottom="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_column="0" android:text="@string/used_long" />
            <TextView android:textSize="16.0sp" android:textColor="?android:textColorPrimary" android:gravity="right" android:id="@id/details_used" android:paddingLeft="8.0dip" android:paddingTop="8.0dip" android:paddingRight="8.0dip" android:paddingBottom="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_column="1" />
        </TableRow>
        <View android:background="#ff222222" android:layout_height="1.0px" />
        <TableRow android:minWidth="48.0dip">
            <TextView android:textSize="14.0sp" android:textColor="?android:textColorSecondary" android:paddingLeft="8.0dip" android:paddingTop="8.0dip" android:paddingRight="8.0dip" android:paddingBottom="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_column="0" android:text="@string/free_long" />
            <TextView android:textSize="16.0sp" android:textColor="?android:textColorPrimary" android:gravity="right" android:id="@id/details_free" android:paddingLeft="8.0dip" android:paddingTop="8.0dip" android:paddingRight="8.0dip" android:paddingBottom="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_column="1" />
        </TableRow>
        <View android:background="#ff222222" android:layout_height="3.0dip" />
        <TableRow android:id="@id/details_tr1" android:minWidth="48.0dip">
            <TextView android:textSize="14.0sp" android:textColor="?android:textColorSecondary" android:paddingLeft="8.0dip" android:paddingTop="8.0dip" android:paddingRight="8.0dip" android:paddingBottom="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_column="0" android:text="@string/blksize" />
            <TextView android:textSize="16.0sp" android:textColor="?android:textColorPrimary" android:gravity="right" android:id="@id/details_blksize" android:paddingLeft="8.0dip" android:paddingTop="8.0dip" android:paddingRight="8.0dip" android:paddingBottom="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_column="1" />
        </TableRow>
        <View android:id="@id/details_hr1" android:background="#ff222222" android:layout_height="1.0px" />
        <TableRow android:id="@id/details_tr2" android:minWidth="48.0dip">
            <TextView android:textSize="14.0sp" android:textColor="?android:textColorSecondary" android:paddingLeft="8.0dip" android:paddingTop="8.0dip" android:paddingRight="8.0dip" android:paddingBottom="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_column="0" android:text="@string/filesystem" />
            <TextView android:textSize="16.0sp" android:textColor="?android:textColorPrimary" android:gravity="right" android:id="@id/details_file_system" android:paddingLeft="8.0dip" android:paddingTop="8.0dip" android:paddingRight="8.0dip" android:paddingBottom="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_column="1" />
        </TableRow>
        <View android:id="@id/details_hr2" android:background="#ff222222" android:layout_height="1.0px" />
        <TableRow android:id="@id/details_tr3" android:minWidth="48.0dip">
            <TextView android:textSize="14.0sp" android:textColor="?android:textColorSecondary" android:paddingLeft="8.0dip" android:paddingTop="8.0dip" android:paddingRight="8.0dip" android:paddingBottom="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_column="0" android:text="@string/mounttype" />
            <TextView android:textSize="16.0sp" android:textColor="?android:textColorPrimary" android:gravity="right" android:id="@id/details_mount_type" android:paddingLeft="8.0dip" android:paddingTop="8.0dip" android:paddingRight="8.0dip" android:paddingBottom="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_column="1" />
        </TableRow>
        <View android:id="@id/details_hr3" android:background="#ff222222" android:layout_height="1.0px" />
    </TableLayout>
</ScrollView>
